@@ -172,10 +172,7 @@ sub list {
   div class => 'mainbox';
    h1 'Browse producers';
    form action => '/p/all', 'accept-charset' => 'UTF-8', method => 'get';
-    fieldset class => 'search';
-     input type => 'text', name => 'q', id => 'q', class => 'text', value => $f->{q};
-     input type => 'submit', class => 'submit', value => 'Search!';
-    end;
+    $self->htmlSearchBox('p', $f->{q});
    end;
    p class => 'browseopts';
     for ('all', 'a'..'z', 0) {
