@@ -368,11 +368,8 @@ sub taglist {
   div class => 'mainbox';
    h1 $title;
    form action => '/g/list', 'accept-charset' => 'UTF-8', method => 'get';
-    fieldset class => 'search';
-     input type => 'hidden', name => 't', value => $f->{t};
-     input type => 'text', name => 'q', id => 'q', class => 'text', value => $f->{q};
-     input type => 'submit', class => 'submit', value => 'Search!';
-    end;
+    input type => 'hidden', name => 't', value => $f->{t};
+    $self->htmlSearchBox('g', $f->{q});
    end;
    p class => 'browseopts';
     a href => "/g/list?q=$f->{q};t=-1", $f->{t} == -1 ? (class => 'optselected') : (), 'All';
@@ -590,10 +587,7 @@ sub tagindex {
    a class => 'addnew', href => "/g/new", ($self->authCan('tagmod')?'Create':'Request').' new tag' if $self->authCan('tag');
    h1 'Search tags';
    form action => '/g/list', 'accept-charset' => 'UTF-8', method => 'get';
-    fieldset class => 'search';
-     input type => 'text', name => 'q', id => 'q', class => 'text';
-     input type => 'submit', class => 'submit', value => 'Search!';
-    end;
+    $self->htmlSearchBox('g', '');
    end;
   end;
 
