@@ -10,6 +10,7 @@
 	- Allow search queries with only one character
 	- Removed category filter from /v/all
 	- Added expand/collapse feature to the history browser
+	- Added tabs on v/r/p/g search fields
 
 2.3 - 2009-04-01
 	- No page reload needed when changing rlist status from vn page
